# aoc2019

./: Cargo.toml  output
data/: 10test.txt
src/: intcode.rs  main.rs
