[package]
name = "aoc"
version = "0.1.0"
authors = ["CptBread <fredrik.astrom89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = "0.9.11"
permutohedron = "0.2.4"
ordered-float = "1.0.2"
itertools = "0.8.2"
console = "0.9.1"
# sorted_bread_box = {git = "https://github.com/CptBread/sorted_bread_box"}
sorted_bread_box = {path = "../sorted_bread_box"}